kubernetes/nginx/service.yml
# Provides a stable private address for the NGINX Pods.
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: k8-lab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: nginx

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
